@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-23T16:08:05Z",
+  "timestamp" : "2022-08-24T08:08:53Z",
   "count_outdated" : 46,
   "uniques_outdated" : 16,
-  "count" : 48,
-  "uniques" : 18,
+  "count" : 52,
+  "uniques" : 19,
   "views" : [
     {
       "timestamp": "2022-08-16T00:00:00Z",
@@ -11,6 +11,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-08-24T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
