@@ -1,11 +1,16 @@
 {
-  "count": 2,
-  "uniques": 2,
+  "count": 6,
+  "uniques": 3,
   "views": [
     {
       "timestamp": "2022-08-16T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-08-24T00:00:00Z",
+      "count": 4,
+      "uniques": 1
     }
   ]
 }
